Update titles. Show tooltip on hillellis title images.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -37,6 +37,7 @@
     <Filter>*.ldf</Filter>
     <Filter>*Thumbs.db</Filter>
     <Filter>*\bin\*.xml</Filter>
+    <Filter>todo.txt</Filter>
   </IgnoreFilters>
   <UploadAssemblyWhenCs>true</UploadAssemblyWhenCs>
   <UploadLog>
@@ -237,7 +238,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-20T17:13:46.6457664-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:43.5913744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -253,7 +254,7 @@
         <string>\admin\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:18.8927216-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:44.5627712-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -301,7 +302,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:51:40.4568672-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:43.9218496-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -325,7 +326,7 @@
         <string>\admin\downloads.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:20.1845792-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:45.1636352-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -341,7 +342,7 @@
         <string>\admin\errors.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:21.4864512-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:46.0649312-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -597,7 +598,7 @@
         <string>\todo.txt</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:32:09.5324-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:47.4606624-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -749,7 +750,7 @@
         <string>\controls\hillelliscontent.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:51:42.2594592-04:00</dateTime>
+        <dateTime>2007-05-20T17:51:46.7659392-04:00</dateTime>
       </value>
     </item>
     <item>
