Update template for TheHillellis. Update insertion so that dates are should be correct.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -71,7 +71,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:25.9960736-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:12.6208928-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -239,7 +239,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-21T23:40:12.2489856-04:00</dateTime>
+        <dateTime>2007-05-22T23:17:38.5252656-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -431,7 +431,7 @@
         <string>\admin\slog.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:36.0004592-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:14.1230528-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -511,7 +511,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:26.2364192-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:12.8211808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -607,7 +607,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:27.1176864-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:13.1216128-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -639,7 +639,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-05-21T20:53:42.5699056-04:00</dateTime>
+        <dateTime>2007-05-22T22:32:03.8645776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -655,7 +655,7 @@
         <string>\admin\thehillellis.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-21T23:40:13.1502816-04:00</dateTime>
+        <dateTime>2007-05-22T23:17:39.1261296-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -663,7 +663,7 @@
         <string>\admin\thehillellis.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-21T21:15:57.460728-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:15.0243488-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -671,7 +671,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:42.4096752-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:15.8255008-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -679,7 +679,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:43.0105392-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:16.4263648-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -687,7 +687,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:43.6114032-04:00</dateTime>
+        <dateTime>2007-05-22T22:42:17.0272288-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -759,7 +759,7 @@
         <string>\thehillellis\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:32:03.323472-04:00</dateTime>
+        <dateTime>2007-05-22T22:15:28.0831264-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -799,7 +799,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-21T20:59:53.1989136-04:00</dateTime>
+        <dateTime>2007-05-22T22:32:04.4954848-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -807,7 +807,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:51:42.9604672-04:00</dateTime>
+        <dateTime>2007-05-22T22:32:05.0963488-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5272,6 +5272,22 @@
       </key>
       <value>
         <dateTime>2007-05-21T23:14:05.5036-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\images</string>
+      </key>
+      <value>
+        <dateTime>2007-05-22T22:16:29.2347824-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\images\down_arrow.png</string>
+      </key>
+      <value>
+        <dateTime>2007-05-22T22:16:29.9458048-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
