Update TheHillellis to have a contact box at the bottom of the page. Update the datetime when inserting values to update timezone. Add logout method to SiteUser. Beef up InsertErrorLog() method.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -3,6 +3,7 @@
 	<appSettings>
 		<add key="Amazon.AWSECommerceService" value="http://soap.amazon.com/onca/soap?Service=AWSECommerceService" />
 		<add key="encryptConnectionStrings" value="false" />
+		<add key="timezoneDifference" value="0" />
 	</appSettings>
 	
 	<connectionStrings>
