--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -22,6 +22,11 @@
       <LookFor>customErrors mode="Off"</LookFor>
       <ReplaceWith>customErrors mode="On"</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>&lt;add key="timezoneDifference" value="0" /&gt;</LookFor>
+      <ReplaceWith>&lt;add key="timezoneDifference" value="3" /&gt;</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -71,7 +76,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:12.6208928-04:00</dateTime>
+        <dateTime>2007-05-23T22:05:42.808352-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -207,7 +212,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:55.111664-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:55.0159712-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -223,7 +228,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:48.4251872-04:00</dateTime>
+        <dateTime>2007-05-23T22:05:46.1731904-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -239,7 +244,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-22T23:17:38.5252656-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:47.3950128-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -311,7 +316,7 @@
         <string>\admin\admin.master</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:34.4081696-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:50.7999088-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -319,7 +324,7 @@
         <string>\admin\admin.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:18.2818432-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:51.4007728-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -511,7 +516,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:12.8211808-04:00</dateTime>
+        <dateTime>2007-05-23T22:05:43.0186544-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -527,7 +532,7 @@
         <string>\app_code\data\admin.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:40.8073712-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:52.9129472-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -607,7 +612,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:13.1216128-04:00</dateTime>
+        <dateTime>2007-05-23T22:05:43.3391152-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -615,7 +620,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:27.7986656-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:48.3664096-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -631,7 +636,7 @@
         <string>\app_code\domain\membership</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:29.4310128-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:48.576712-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -639,7 +644,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:32:03.8645776-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:48.9372304-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -679,7 +684,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:16.4263648-04:00</dateTime>
+        <dateTime>2007-05-23T22:05:44.5408432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -687,7 +692,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:17.0272288-04:00</dateTime>
+        <dateTime>2007-05-23T22:05:45.3419952-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -719,7 +724,7 @@
         <string>\app_code\domain\membership\siteuser.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:48.301872-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:54.1046608-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -799,7 +804,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:32:04.4954848-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:56.5181312-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -807,7 +812,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:32:05.0963488-04:00</dateTime>
+        <dateTime>2007-05-23T21:37:57.4194272-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5288,6 +5293,22 @@
       </key>
       <value>
         <dateTime>2007-05-22T22:16:29.9458048-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\js</string>
+      </key>
+      <value>
+        <dateTime>2007-05-23T21:37:49.678296-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\js\onload.js</string>
+      </key>
+      <value>
+        <dateTime>2007-05-23T21:37:55.7169792-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
