Updated web.config to register controls there instead of in every page. Started work on permalink page. Updated HillellisContent for the permalink changes coming down the road. Fixed the IBlog data classes because they both had a compile error.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -36,7 +36,8 @@
 
 		<pages>
 			<controls>
-				<add tagPrefix="a" src="~/Controls/Login.ascx" tagName="login"/>
+				<add tagPrefix="lng" src="~/Controls/Login.ascx" tagName="login"/>
+				<add tagPrefix="lng" src="~/Controls/HillellisContent.ascx" tagName="content"/>
 			</controls>
 		</pages>
 	</system.web>
