Added the h1 around titles. Made only the default page call the onload and onresize events. Renamed the js file used. Fixed the timezone issue. Added links for the titles.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -76,7 +76,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:36.519768-04:00</dateTime>
+        <dateTime>2007-05-25T23:25:46.9061408-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -308,7 +308,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:37.220776-04:00</dateTime>
+        <dateTime>2007-05-25T23:19:40.0963488-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -516,7 +516,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-24T21:46:30.813-04:00</dateTime>
+        <dateTime>2007-05-25T23:25:47.0801152-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -612,7 +612,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-24T21:46:30.9932592-04:00</dateTime>
+        <dateTime>2007-05-25T23:25:47.2403456-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -644,7 +644,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:27:08.629664-04:00</dateTime>
+        <dateTime>2007-05-25T23:24:04.1646816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -684,7 +684,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-24T21:46:32.0047136-04:00</dateTime>
+        <dateTime>2007-05-25T23:25:47.8612384-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -692,7 +692,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-24T21:46:32.6055776-04:00</dateTime>
+        <dateTime>2007-05-25T23:25:48.4621024-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -748,7 +748,7 @@
         <string>\controls\hillelliscontent.ascx</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:39.123512-04:00</dateTime>
+        <dateTime>2007-05-25T23:19:41.07776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -764,7 +764,7 @@
         <string>\thehillellis\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:27:09.180456-04:00</dateTime>
+        <dateTime>2007-05-25T23:05:32.9460672-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -804,7 +804,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:46.0434624-04:00</dateTime>
+        <dateTime>2007-05-25T23:19:41.7687536-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -812,7 +812,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:26:00.3878128-04:00</dateTime>
+        <dateTime>2007-05-25T23:05:37.2522592-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5300,7 +5300,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:49.678296-04:00</dateTime>
+        <dateTime>2007-05-25T23:05:31.0333168-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5309,6 +5309,46 @@
       </key>
       <value>
         <dateTime>2007-05-23T21:37:55.7169792-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\js\thehillellis.js</string>
+      </key>
+      <value>
+        <dateTime>2007-05-25T23:05:33.8473632-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\permalink.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-25T23:05:34.6585296-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\permalink.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-25T23:05:35.5898688-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\tester.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-25T23:24:04.725488-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\tester.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-25T23:24:05.326352-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
