Entries are subclassed now so permalinking is easier (and it's classy).

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -76,7 +76,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:25:46.9061408-04:00</dateTime>
+        <dateTime>2007-05-26T19:14:05.4868448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -212,7 +212,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:55.0159712-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:25.0787408-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -228,7 +228,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:47.5456224-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:30.0759264-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -244,7 +244,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:47.3950128-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:10.07344-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -260,7 +260,7 @@
         <string>\admin\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-20T17:51:44.5627712-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:14.4597472-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -308,7 +308,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:19:40.0963488-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:12.226536-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -316,7 +316,7 @@
         <string>\admin\admin.master</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:50.7999088-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:13.2580192-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -324,7 +324,7 @@
         <string>\admin\admin.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:51.4007728-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:13.8588832-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -332,7 +332,7 @@
         <string>\admin\downloads.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-20T17:51:45.1636352-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:15.0606112-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -340,7 +340,7 @@
         <string>\admin\downloads.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:20.7854432-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:15.6614752-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -348,7 +348,7 @@
         <string>\admin\errors.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-20T17:51:46.0649312-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:16.3624832-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -356,7 +356,7 @@
         <string>\admin\errors.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:22.0873152-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:16.9633472-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -428,7 +428,7 @@
         <string>\admin\slog.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:35.0991632-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:17.5642112-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -436,7 +436,7 @@
         <string>\admin\slog.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:14.1230528-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:18.4655072-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -516,7 +516,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:25:47.0801152-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:10.624232-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -532,7 +532,7 @@
         <string>\app_code\data\admin.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:52.9129472-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:20.0815552-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -612,7 +612,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:25:47.2403456-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:31.9486192-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -620,7 +620,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:36.7100416-04:00</dateTime>
+        <dateTime>2007-05-26T19:14:05.6470752-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -628,7 +628,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:36.8903008-04:00</dateTime>
+        <dateTime>2007-05-26T19:14:05.8073056-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -636,7 +636,7 @@
         <string>\app_code\domain\membership</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:48.576712-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:11.9060752-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -644,7 +644,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:24:04.1646816-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:12.57704-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -660,7 +660,7 @@
         <string>\admin\thehillellis.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-22T23:17:39.1261296-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:36.1646816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -668,7 +668,7 @@
         <string>\admin\thehillellis.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:15.0243488-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:19.3605184-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -676,7 +676,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:42:15.8255008-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:38.177576-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -684,7 +684,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:25:47.8612384-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:39.0688576-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -692,7 +692,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:25:48.4621024-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:39.6697216-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -716,7 +716,7 @@
         <string>\app_code\domain\blog\entry.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:47.300432-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:43.6754816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -724,7 +724,7 @@
         <string>\app_code\domain\membership\siteuser.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-23T21:37:54.1046608-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:23.6667104-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -748,7 +748,7 @@
         <string>\controls\hillelliscontent.ascx</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:19:41.07776-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:44.3764896-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -756,7 +756,7 @@
         <string>\controls\hillelliscontent.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:39.724376-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:24.3677184-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -764,7 +764,7 @@
         <string>\thehillellis\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:05:32.9460672-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:25.7697344-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -772,7 +772,7 @@
         <string>\thehillellis\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-24T23:25:45.2423104-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:26.3705984-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -804,7 +804,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:19:41.7687536-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:28.1731904-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -812,7 +812,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:05:37.2522592-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:28.7740544-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -820,7 +820,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:32:08.731248-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:29.3749184-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5284,7 +5284,7 @@
         <string>\images</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:16:29.2347824-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:34.4922768-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5292,7 +5292,7 @@
         <string>\images\down_arrow.png</string>
       </key>
       <value>
-        <dateTime>2007-05-22T22:16:29.9458048-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:45.6783616-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5300,7 +5300,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:05:31.0333168-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:35.2433568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5316,7 +5316,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:05:33.8473632-04:00</dateTime>
+        <dateTime>2007-05-26T18:58:46.3793696-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5324,7 +5324,7 @@
         <string>\thehillellis\permalink.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:05:34.6585296-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:26.9714624-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5332,7 +5332,7 @@
         <string>\thehillellis\permalink.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-25T23:05:35.5898688-04:00</dateTime>
+        <dateTime>2007-05-26T19:07:27.5723264-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5349,6 +5349,46 @@
       </key>
       <value>
         <dateTime>2007-05-25T23:24:05.326352-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entries</string>
+      </key>
+      <value>
+        <dateTime>2007-05-26T19:14:05.967536-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entries\adamentries.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-26T19:07:20.75252-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entries\baseentries.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-26T19:14:06.5083136-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entries\entriesfactory.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-26T19:07:21.9642624-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entries\lynnentries.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-26T19:07:22.5651264-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
