Datalayer and domain archive object. Finish the archive.aspx page. Cache the archive content.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -76,7 +76,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:14:05.4868448-04:00</dateTime>
+        <dateTime>2007-05-28T14:23:46.8743952-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -308,7 +308,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:12.226536-04:00</dateTime>
+        <dateTime>2007-05-28T14:16:07.0648656-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -516,7 +516,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:10.624232-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:07.5870544-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -540,7 +540,7 @@
         <string>\app_code\data\base.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:41.7086672-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:11.6529008-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -612,7 +612,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:31.9486192-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:08.1078032-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -620,7 +620,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:14:05.6470752-04:00</dateTime>
+        <dateTime>2007-05-28T14:23:47.0246112-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -628,7 +628,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:14:05.8073056-04:00</dateTime>
+        <dateTime>2007-05-28T14:23:47.1848416-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -644,7 +644,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:12.57704-04:00</dateTime>
+        <dateTime>2007-05-28T14:23:47.5153168-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -676,7 +676,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:38.177576-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:12.4440384-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -684,7 +684,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:39.0688576-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:13.0549168-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -692,7 +692,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:39.6697216-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:13.6557808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -748,7 +748,7 @@
         <string>\controls\hillelliscontent.ascx</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:44.3764896-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:17.353384-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -756,7 +756,7 @@
         <string>\controls\hillelliscontent.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:24.3677184-04:00</dateTime>
+        <dateTime>2007-05-28T14:16:08.1163776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -804,7 +804,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:28.1731904-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:22.6710304-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -812,7 +812,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:28.7740544-04:00</dateTime>
+        <dateTime>2007-05-28T14:23:49.5382256-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -820,7 +820,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:29.3749184-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:23.8827728-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5300,7 +5300,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:35.2433568-04:00</dateTime>
+        <dateTime>2007-05-28T14:12:18.3948816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5316,7 +5316,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:46.3793696-04:00</dateTime>
+        <dateTime>2007-05-28T14:12:19.806912-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5324,7 +5324,7 @@
         <string>\thehillellis\permalink.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:26.9714624-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:21.0687264-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5332,7 +5332,7 @@
         <string>\thehillellis\permalink.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:27.5723264-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:21.6896192-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5356,7 +5356,7 @@
         <string>\app_code\domain\blog\entries</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:14:05.967536-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:09.3996608-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5380,7 +5380,7 @@
         <string>\app_code\domain\blog\entries\entriesfactory.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:21.9642624-04:00</dateTime>
+        <dateTime>2007-05-28T14:08:16.652376-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5389,6 +5389,38 @@
       </key>
       <value>
         <dateTime>2007-05-26T19:07:22.5651264-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\archive.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-28T14:23:48.2263392-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\archives.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-28T14:23:48.847232-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\archive.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-28T14:16:08.9175296-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\archive.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-28T14:08:19.356264-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
